# rust-grpc-client-pg

./: Cargo.toml  README.md  build.rs
proto/: hello.proto
src/: client.rs
