[package]
name = "grpc-client-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.7"
prost = "0.10"
glog = "0.1.0"
log = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"
